--- a/6. Server Rules.md
+++ b/6. Server Rules.md
@@ -1,15 +1,18 @@
 # 6. Server Rules
 
+
 Don’t be mean
 Be respectful to other users and their opinions on the server.
 Don’t shove your opinion down someone’s throat.
 Constructive argument is allowed. However, if it turns into insults and disrespect, you may be banned mid argument so you will lose the argument (and give you time to cool off)
 This server is not your personal dating website. Refrain from sliding into people's DMs unsolicited
+Maintain a welcoming environment for new users [effective Nov 20, 12:01am]
+NSFW content should only be posted in #NSFW [effective Nov 20, 12:01am]
 
+Please the the git history here:
 
+[18chanp1/aquarium-rules · GitHub](https://github.com/18chanp1/aquarium-rules)
 
-Last amended 21:32 13 November 2022
-
-
+Last amended 21:39 17 November 2022
 
 
