--- a/6. Server Rules.md
+++ b/6. Server Rules.md
@@ -4,15 +4,17 @@
 1. Don’t be mean
 2. Be respectful to other users and their opinions on the server.
 3. Don’t shove your opinion down someone’s throat.
-4. Constructive argument is allowed. However, if it turns into insults and disrespect, you may be banned mid argument so you will lose the argument (and give you time to cool off)
-5. This server is not your personal dating website. Refrain from sliding into people's DMs unsolicited
-6. Maintain a welcoming environment for new users [effective Nov 20, 12:01am]
-7. NSFW content should only be posted in #NSFW [effective Nov 20, 12:01am]
+4. Constructive argument is allowed. However, if it turns into insults and disrespect, you may be banned mid argument so you will lose the argument. (and give you time to cool off)
+5. This server is not your personal dating website. Refrain from sliding into people's DMs unsolicited.
+6. Maintain a welcoming environment for new users.
+7. NSFW content should only be posted in #NSFW.
+8. All moderation actions against users, including but not limited to bans, timeouts, mutes, removal of roles etc., must be accompanied by written documentation and justification to affected users within 48 hours. Please report any violations of this rule via reporting existing reporting mechanism. 
+
 
 Please the the git history here:
 
 [18chanp1/aquarium-rules · GitHub](https://github.com/18chanp1/aquarium-rules)
 
-Last amended 21:39 17 November 2022
+Last amended 22:15 30 November 2022
 
 
