Update 6. Server Rules.md
rule 9

--- a/6. Server Rules.md
+++ b/6. Server Rules.md
@@ -9,6 +9,8 @@
 6. Maintain a welcoming environment for new users.
 7. NSFW content should only be posted in #NSFW.
 8. All moderation actions against users, including but not limited to bans, timeouts, mutes, removal of roles etc., must be accompanied by written documentation and justification to affected users within 48 hours. Please report any violations of this rule via reporting existing reporting mechanism. 
+9.The server owner may take any action necessary for the well order and functioning of the server. The owner will not make any explanation.
+
 
 
 Please the the git history here:
